:bug: Fix audio control not being visible

--- a/audio-control.css
+++ b/audio-control.css
@@ -1,6 +1,6 @@
 #audio-control-outer-div {
   width: 100%;
-  padding: 0.5rem 1.5rem 0 1.5rem;
+  padding: 4rem 1.5rem 0 1.5rem;
 }
 
 #audio-progress {
